<resources>
    <string name="app_name">Task5Chapter5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in" />
    <string name="password" >Password</string>
    <string name="welcome">Welcome</string>
    <string name="no_account_yet">no account yet</string>
    <string name="create_here" >Create here</string>
    <string name="todo" />
    <string name="email">email</string>
    <string name="login">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create An Account</string>
    <string name="have_an_account">Have an account?</string>
    <string name="username">Username</string>
</resources>